--- a/discord-games/ARK/index.html
+++ b/discord-games/ARK/index.html
@@ -28,7 +28,7 @@
 
     <meta
     name="twitter:image"
-    content="/cu azedo 2.png"
+    content="https://raphap3.github.io/discord-games/ARK"
     >
 
     <meta
