cu azedo 3.5 a vingança

--- a/discord-games/ARK/index.html
+++ b/discord-games/ARK/index.html
@@ -28,7 +28,7 @@
 
     <meta
     name="twitter:image"
-    content="https://raphap3.github.io/discord-games/ARK/cu azedo 3.png"
+    content="https://raphap3.github.io/discord-games/ARK/cu_azedo_3.png"
     >
 
     <meta
