--- a/discord-games/ARK/index.html
+++ b/discord-games/ARK/index.html
@@ -1,38 +1,17 @@
 <!DOCTYPE html>
 
 <head>
-    <meta 
-    property="og:type"
-    content="video.other"
-    >
+    <meta property="og:type" content="video.other">
 
-    <meta
-    property="twitter:player"
-    content="https://www.youtube.com/embed/egYTYpleY0U"
-    >
+    <meta property="twitter:player" content="https://www.youtube.com/embed/egYTYpleY0U">
 
-    <meta
-    property="og:video:type"
-    content="text/html"
-    >
+    <meta property="og:video:type" content="text/html">
 
-    <meta
-    property="og:video:width"
-    content="900"
-    >
+    <meta property="og:video:width" content="900">
 
-    <meta
-    property="og:video:height"
-    content="506"
-    >
+    <meta property="og:video:height" content="506">
 
-    <meta
-    name="twitter:image"
-    content="https://raphap3.github.io/discord-games/ARK/cu_azedo_3.png"
-    >
+    <meta name="twitter:image" content="https://raphap3.github.io/discord-games/ARK/cu_azedo_3.png">
 
-    <meta
-    http-equiv="refresh"
-    content="0;url=https://www.youtube.com/watch?v=egYTYpleY0U"
-    >
+    <meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=egYTYpleY0U">
 </head>
