--- a/discord-games/ARK/index.html
+++ b/discord-games/ARK/index.html
@@ -6,6 +6,6 @@
     <meta property="og:video:type" content="text/html">
     <meta property="og:video:width" content="900">
     <meta property="og:video:height" content="506">
-    <meta name="twitter:image" content="https://raphap3.github.io/images/cu_azedo_3.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/RaphaP3/raphap3.github.io/master/images/cu_azedo_3.png">
     <meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=egYTYpleY0U">
 </head>
